--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  background-color: black;
+  background-color: rgb(17, 17, 17);
 }
 .layout {
   height: 100vh;
-  max-width: 500px;
+  max-width: 600px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -20,6 +20,8 @@
   align-items: center;
   margin-bottom: 30px;
   color: white;
+  border: 2px white solid;
+  padding: 10px;
 }
 
 .opciones {
@@ -28,8 +30,9 @@
 
 .opcion {
   display: flex;
-  gap: 15px;
+  gap: 10px;
   margin-bottom: 10px;
+  font-size: 20px;
 }
 
 .recordatorio {
@@ -54,8 +57,7 @@
   text-shadow: 0px 1px 0px #ffffff;
 }
 .botones:hover {
-  background: linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
-  background-color: #e9e9e9;
+  background: linear-gradient(to bottom, #e9e9e9 5%, #f8b8b8 100%);
 }
 .botones:active {
   position: relative;
